Fixed Bug #26625 (pg_convert sets NULL incorrectly for character data types).